--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
 			<version>3.5.3</version>
 		</dependency>
 		
+<dependency>
+    <groupId>io.qameta.allure</groupId>
+    <artifactId>allure-maven</artifactId>
+    <version>2.8</version>
+</dependency>
+		
 		 <dependency>
      <groupId>io.qameta.allure</groupId>
      <artifactId>allure-testng</artifactId>
